# usdb_downloader

./: .dockerignore  .gitignore  .tool-versions  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  lefthook.yml  pyproject.toml  renovate.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature-request.yml
.github/workflows/: usdb_downloader.yml
src/usdb_downloader/: __init__.py  app.py  console.py  main.py  models.py  parser.py  silent_logger.py  youtube_downloader.py
tests/: test_app.py  test_parser.py  test_youtube_downloader.py
