# ============================================================================
# Build System Configuration
# ============================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ============================================================================
# Project Metadata
# ============================================================================
[project]
name = "usdb-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.10",
]

[project.scripts]
usdb-downloader = "usdb_downloader.main:main"

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
line-length = 88
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors (includes indentation: E111, E117)
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "PTH",   # flake8-use-pathlib
    "RET",   # flake8-return
    "PIE",   # flake8-pie
    "PERF",  # perflint
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["ultrastar_deluxe_downloader"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

# ============================================================================
# Pyright Configuration
# ============================================================================
[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/build",
    "**/dist",
]
typeCheckingMode = "strict"
pythonVersion = "3.14"
pythonPlatform = "All"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "warning"
reportOptionalMemberAccess = "none"
reportOptionalSubscript = "none"
reportPrivateUsage = "none"
